"prevented text from causing overflow, added debounce, and added timeout for generating overflow buttons" "

--- a/index.css
+++ b/index.css
@@ -776,7 +776,7 @@ img.blur {
   -ms-box-shadow: 0px -0.5px 3px 0.5px black;
   position: relative;
   display: flex;
-  min-height: calc(100vh - 55px);
+  min-height: calc(100vh - 70px);
   height: 100%;
   width: 100%;
   justify-content: space-between;
@@ -808,7 +808,6 @@ img.blur {
   justify-content: center;
   align-items: center;
   transition: all linear 0.95s;
-  height: 100%;
   width: 100%;
   overflow-x: hidden;
 }
@@ -817,30 +816,32 @@ img.blur {
   display: flex;
   align-items: center;
   flex-direction: column;
-  height: 100%;
   transition: all linear 0.4s;
+  height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 .caro-item h2 {
   font-weight: 400;
   font-size: 2rem;
   margin-top: 1.5rem;
   margin-bottom: 2rem;
-  transition: all linear 0.4s;
 }
-.caro-item div {
+.caro-item div, .caro-item h2 {
   transition: all linear 0.4s;
 }
 
 .caro-item.no-width {
-  width: 0;
+  width: 0%;
 }
 
 .caro-item.hidden {
   visibility: hidden;
   opacity: 0;
+  overflow: hidden;
 }
 .caro-item.hidden div, .caro-item.hidden h2 {
+  white-space: nowrap;
   opacity: 0;
   visibility: hidden;
 }
@@ -926,24 +927,20 @@ img.blur {
 }
 .project-description > div .text-container {
   transition: all ease-out 0.4s;
-  max-height: 100%;
   padding: 1rem;
   margin-bottom: 1.5rem;
+  max-height: 900px;
   overflow: hidden;
 }
 
 .expand-container-btn {
   position: absolute;
   bottom: 0;
-  left: 0.75px;
-  width: calc(100% - 1.5px);
+  left: 1px;
+  width: calc(100% - 2px);
   border: none;
   font-size: 1.5rem;
   padding: 0.75rem;
-  box-shadow: inset 0px -1px 1px 0.15px rgba(0, 0, 0, 0.603);
-  -webkit-box-shadow: inset 0px -1px 1px 0.15px rgba(0, 0, 0, 0.603);
-  -moz-box-shadow: inset 0px -1px 1px 0.15px rgba(0, 0, 0, 0.603);
-  -ms-box-shadow: inset 0px -1px 1px 0.15px rgba(0, 0, 0, 0.603);
   border-radius: 0 0 5px 5px;
   -webkit-border-radius: 0 0 5px 5px;
   -moz-border-radius: 0 0 5px 5px;
@@ -956,10 +953,10 @@ img.blur {
 }
 
 .project-description > div.hide {
-  max-height: 240px;
+  max-height: 230px;
 }
 .project-description > div.hide .text-container {
-  max-height: 160px;
+  max-height: 140px;
 }
 
 .caro-item-content.lightMode {
@@ -986,6 +983,10 @@ img.blur {
   background-color: #851d30;
 }
 .caro-item-content.lightMode .project-description > div .expand-container-btn {
+  box-shadow: inset 0px -1.5px 1px 0.15px black;
+  -webkit-box-shadow: inset 0px -1.5px 1px 0.15px black;
+  -moz-box-shadow: inset 0px -1.5px 1px 0.15px black;
+  -ms-box-shadow: inset 0px -1.5px 1px 0.15px black;
   background-color: white;
 }
 
@@ -1015,6 +1016,10 @@ img.blur {
   border-bottom: 1px solid white;
 }
 .caro-item-content.darkMode .project-description > div .expand-container-btn {
+  box-shadow: inset 0px -1.5px 1px 0.15px white;
+  -webkit-box-shadow: inset 0px -1.5px 1px 0.15px white;
+  -moz-box-shadow: inset 0px -1.5px 1px 0.15px white;
+  -ms-box-shadow: inset 0px -1.5px 1px 0.15px white;
   background-color: #292929;
 }
 
